--- a/pytest.ini
+++ b/pytest.ini
@@ -2,7 +2,7 @@
 [pytest]
 #norecursedirs= .* *.egg* build dist
 #minversion = 6.0
-testpaths =
+testpath =
     tests
-python_files =
-    test_*.py
+#python_files =
+#    test_*.py
