--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -8,9 +8,9 @@
 
 name: Upload Python Package
 
-on:
-  release:
-    types: [published]
+on: push
+#  release:
+#    types: [published]
 
 permissions:
   contents: read
@@ -51,7 +51,7 @@ jobs:
     environment:
       name: pypi
       # OPTIONAL: uncomment and update to include your PyPI project URL in the deployment status:
-      url: https://pypi.org/p/trace
+      url: https://pypi.org/p/trace-python
       #
       # ALTERNATIVE: if your GitHub Release name is the PyPI project version string
       # ALTERNATIVE: exactly, uncomment the following line instead:
