--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,7 +9,10 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
-
+  jobs:
+    pre_install:
+      - pip install mkdocs-material
+       
 mkdocs:
   configuration: mkdocs.yml
 
